Added first js lesson

--- a/javascript/js1.html
+++ b/javascript/js1.html
@@ -93,7 +93,10 @@
             <code class="hl">   context.fillText(`${playerScore} ${opponentScore}`, canvas.width / 2, 60);</code>
             <code class="hl">}</code>
         </pre>
-        <!-- TODO: possibly set the left margin of the code block with JS -->
+    </section>
+
+    <section class="next-previous-wrapper">
+        <a href="js2.html">Next &gt;</a>
     </section>
 
     <nav class="course-nav">
