Updated code block

--- a/python/Lesson6.html
+++ b/python/Lesson6.html
@@ -44,8 +44,7 @@
             <code>import random</code>
             <code>name = input("What is your name? ")</code>
             <code>print("Hi,", name, "! Good luck!")</code>
-            <code>words = ['python', 'computers', 'programming', 'dog', 'cat',
-                'math']</code>
+            <code>words = ['python', 'computers', 'programming', 'dog', 'cat', 'math']</code>
             <code>word = random.choice(words)</code>
             <code>guesses = ''</code>
             <code>turns = 12</code>
