Add JS lesson 2

--- a/java/Courseinfo.html
+++ b/java/Courseinfo.html
@@ -24,11 +24,14 @@
         <h1> Introduction to Java </h1>
         <p>
             <!-- Info on your language. Copy and paste from folder or nextenstem.co under your section -->
-            Java is an incredibly popular and widespread programming language present in many of the games and websites you use on a daily basis.
+            Java is an incredibly popular and widespread programming language present in many of the games and websites
+            you use on a daily basis.
             For example, if you have ever played Minecraft, that game was made entirely through java.
-            Java is an excellent language for developing desktop and mobile applications, embedded systems, large data processing, and so on and so forth.
+            Java is an excellent language for developing desktop and mobile applications, embedded systems, large data
+            processing, and so on and so forth.
             Java is one of the most popular languages, being on over 3 billion devices in the world.
-            The language takes a little getting used to, but once the basics are mastered, the applications and potential are endless.
+            The language takes a little getting used to, but once the basics are mastered, the applications and
+            potential are endless.
 
         </p>
 
@@ -42,33 +45,24 @@
         <p>
             <!-- Info on your course. Copy and paste from folder or nextenstem.co under your section -->
             This course will focus on all of the basics needed for a solid understanding of java programming.
-            Using these skills, one will be able to create advanced algorithms, games, and even graphical user interfaces.
-
+            Using these skills, one will be able to create advanced algorithms, games, and even graphical user
+            interfaces.
         </p>
+        <p>The only requirements for this class are:</p>
         <!-- Course Reqs. Copy and paste from folder or nextenstem.co under your section-->
 
         <ol>
-          <li> The only requirements for this class are:
-</li>
-            <li>  1) A computer running any sort of operating system, preferably one that you can create files on and download files on.</li>
-            <li>  2) A text editor. For example, eclipse for MacBooks, and IntelliJ for windows.</li>
+            <li> A computer running any sort of operating system, preferably one that you can create files on and
+                download files on.</li>
+            <li> A text editor. For example, eclipse for MacBooks, and IntelliJ for windows.</li>
 
         </ol>
-    </section>
-
-    <!-- Example code block -->
-    <section class="code">
-        <pre>
-
-
-
-        </pre>
     </section>
 
     <!-- Add the appropriate links to each <a> tag -->
     <section class="next-previous-wrapper">
 
-        <a href="Lesson1.html" >Next &gt;</a>
+        <a href="Lesson1.html">Next &gt;</a>
     </section>
 
     <nav class="course-nav">
@@ -102,4 +96,4 @@
     </footer>
 </body>
 
-</html/>
+</html />
