--- a/javascript/js2.html
+++ b/javascript/js2.html
@@ -46,6 +46,8 @@
 
         <img src="jsimages/img1.png" alt="Image of a basic html file with a script tag">
 
+        <hr class="hr-1">
+
         <h3>Windows:</h3>
 
         <p>
@@ -75,6 +77,8 @@
 
         <img src="jsimages/img3.png" alt="Image of browser with 'Hello World' printed in the browser">
 
+        <hr class="hr-1">
+
         <h3>Setting up with Visual Studio Code</h3>
 
         <p>
@@ -83,8 +87,7 @@
             JS in this course. You don't have to use it to learn the basics, but it will be useful for larger projects.
         </p>
 
-        <p>D
-            ownload VS Code from this link: <a href="https://code.visualstudio.com/"
+        <p>Download VS Code from this link: <a href="https://code.visualstudio.com/"
                 target="_blank">https://code.visualstudio.com/</a>.
         </p>
         <p>
@@ -130,8 +133,10 @@
             You can also write JavaScript directly in the Console. Try entering <code>console.log(“Hello There”);</code>
             in the console. You should see “Hello There” appear in the console.
         </p>
+
+        <hr class="hr-1">
+
         <p>
-            <br>
             Recommendation: <br>
             On VS Code, download the extension “Live Server”. Right click on the html file <code>&gt; Open with Live
                 Server</code> or click the button on the bottom right to
