--- a/index.html
+++ b/index.html
@@ -53,14 +53,14 @@
 
             <li><a href="python/CourseLandingPage.html" class="nav-bottom-link" id="python">PYTHON</a></li>
 
-            <li><a href="#" class="nav-bottom-link" id="java">JAVA</a></li>
+            <li><a href="java/Courseinfo.html" class="nav-bottom-link" id="java">JAVA</a></li>
         </ul>
     </nav>
     <footer>
         <p>
             NEXT GEN STEM <br> CONNECTICUT, USA
         </p>
-         <a href="mailto:thenextgenstem@gmail.com">
+        <a href="mailto:thenextgenstem@gmail.com">
             <img src="images/Mail-Icon-White-on-Grey.jpg" style="width:65px; height:65px">
         </a>
     </footer>
