Fix Java lessons next/previous links

--- a/java/Lesson1.html
+++ b/java/Lesson1.html
@@ -50,7 +50,7 @@
 
     <!-- Add the appropriate links to each <a> tag -->
     <section class="next-previous-wrapper">
-        <a href="CourseLandingPage.html">&lt; Previous</a>
+        <a href="Courseinfo.html">&lt; Previous</a>
         <a href="Lesson2.html">Next &gt;</a>
     </section>
 
