Finish js course

--- a/javascript/js1.html
+++ b/javascript/js1.html
@@ -56,11 +56,11 @@
             has many useful features, like a debugger and syntax highlighting.
             An IDE is not necessary for learning the basics of JS, but it is
             very convenient. This course will make use of the
-            <a href="https://code.visualstudio.com" target="_blank">Visual Studio
+            <a href="https://code.visualstudio.com" target="_blank" rel="noopener">Visual Studio
                 Code</a>, text editor because it is free and versatile. If you like,
             you could use any other editor or IDE suitable for developing JavaScript,
             like Atom or Sublime Text. For the purposes of learning, you could
-            even use an online tool, like <a href="https://jsfiddle.net" target="_blank">
+            even use an online tool, like <a href="https://jsfiddle.net" target="_blank" rel="noopener">
                 https://jsfiddle.net</a>, to run simple
             JS code. Search something like “run js online” for more options.
             You could even write code in a simple text document, if you wanted to.
