--- a/javascript/js2.html
+++ b/javascript/js2.html
@@ -88,12 +88,12 @@
         </p>
 
         <p>Download VS Code from this link: <a href="https://code.visualstudio.com/"
-                target="_blank">https://code.visualstudio.com/</a>.
+                target="_blank" rel="noopener">https://code.visualstudio.com/</a>.
         </p>
         <p>
             Get further information on the functionality of the program at this link: <a
                 href="https://code.visualstudio.com/docs/setup/setup-overview"
-                target="_blank">https://code.visualstudio.com/docs/setup/setup-overview</a>.
+                target="_blank" rel="noopener">https://code.visualstudio.com/docs/setup/setup-overview</a>.
         </p>
         <p>
             When you download and open the program, you will see a welcome page. I recommend playing around with some
