--- a/javascript/js8.html
+++ b/javascript/js8.html
@@ -152,7 +152,7 @@
             right walls because when the ball touches those walls, the player or the opponent should gain points, and
             the ball should be reset to the center. We will implement that later.
         </p>
-        <p><a href="https://github.com/abh-c/gameDemo3" target="_blank">Source code</a></p>
+        <p><a href="https://github.com/abh-c/gameDemo3" target="_blank" rel="noopener">Source code</a></p>
     </section>
 
     <section class="next-previous-wrapper">
