--- a/javascript/js6.html
+++ b/javascript/js6.html
@@ -37,7 +37,7 @@
             <source src="jsimages/bonk.mp4" type="video/mp4">
             <p>
                 Your browser doesn't support mp4 videos. Here is
-                a <a href="jsimages/bonk.mp4">link</a> to the video instead.
+                a <a href="jsimages/bonk.mp4" target="_blank" rel="noopener">link</a> to the video instead.
             </p>
         </video>
         <p>Table of Contents:</p>
@@ -164,7 +164,7 @@
             can explore those as well.
         </p>
         <p>
-            <a href="https://github.com/abh-c/gameDemo1" target="_blank">Lesson source code</a>
+            <a href="https://github.com/abh-c/gameDemo1" target="_blank" rel="noopener">Lesson source code</a>
         </p>
     </section>
 
