--- a/htmlcss/html-course-landing-page.html
+++ b/htmlcss/html-course-landing-page.html
@@ -24,20 +24,29 @@
         <h1>HTML + CSS</h1>
         <p>
             <!-- Info on your language. Copy and paste from folder or nextenstem.co under your section -->
-            The programming languages of HTML and CSS are known as “front-end” coding languages. This means that the code results in what is directly displayed on a web page. For example, HTML and CSS is what allows the text and logo to be seen when you open up a search engine.
+            The programming languages of HTML and CSS are known as “front-end” coding languages. This means that the
+            code results in what is directly displayed on a web page. For example, HTML and CSS is what allows the text
+            and logo to be seen when you open up a search engine.
         </p>
-      	<p>
+        <p>
             <!-- Info on your language. Copy and paste from folder or nextenstem.co under your section -->
-            HTML, or more specifically, Hypertext Markup Language, is an ever growing programming language that is the skeleton to a web page. The language puts specific elements onto the website such as the text, images, etcetera.
+            HTML, or more specifically, Hypertext Markup Language, is an ever growing programming language that is the
+            skeleton to a web page. The language puts specific elements onto the website such as the text, images,
+            etcetera.
         </p>
-       <p>
+        <p>
             <!-- Info on your language. Copy and paste from folder or nextenstem.co under your section -->
-CSS, or Cascading Style Sheets, does exactly what the name implies, it styles the website. CSS is the language that allows for the text to change into a different color and controls where the images are located for example.
+            CSS, or Cascading Style Sheets, does exactly what the name implies, it styles the website. CSS is the
+            language that allows for the text to change into a different color and controls where the images are located
+            for example.
 
         </p>
-      <p>
+        <p>
             <!-- Info on your language. Copy and paste from folder or nextenstem.co under your section -->
-HTML and CSS work hand-in-hand to create beautifully designed websites and in the following lessons you will learn how to code your very own custom website from scratch using these two languages! The website can be anything, from a place to document your favorite trip, a virtual photo book of your favorite pictures, to a blog!
+            HTML and CSS work hand-in-hand to create beautifully designed websites and in the following lessons you will
+            learn how to code your very own custom website from scratch using these two languages! The website can be
+            anything, from a place to document your favorite trip, a virtual photo book of your favorite pictures, to a
+            blog!
 
         </p>
     </section>
@@ -48,20 +57,22 @@ HTML and CSS work hand-in-hand to create beautifully designed websites and in th
         </h2>
         <p>
             <!-- Info on your course. Copy and paste from folder or nextenstem.co under your section -->
-           This course will cover a wide range of HTML and CSS functions and by the end you will have your own, custom, website!
+            This course will cover a wide range of HTML and CSS functions and by the end you will have your own, custom,
+            website!
 
 
         </p>
-       <p>
+        <p>
             <!-- Info on your course. Copy and paste from folder or nextenstem.co under your section -->
-           Course Requirements:
+            Course Requirements:
 
         </p>
         <!-- Course Reqs. Copy and paste from folder or nextenstem.co under your section-->
         <ol>
             <li>A computer to write code and open files
-</li>
-            <li>A code writing software, I will use <a href="https://code.visualstudio.com/" class="nav-top-link">Visual Code Studio</a></li>
+            </li>
+            <li>A code writing software, I will use <a href="https://code.visualstudio.com/">Visual
+                    Studio Code</a></li>
             <li>A browser</li>
         </ol>
     </section>
