--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
             <!-- TODO: Fill in links once we get the courses up -->
             <li><a href="javascript/js1.html" class="nav-bottom-link" id="javascript">JAVASCRIPT</a></li>
 
-            <li><a href="#" class="nav-bottom-link" id="htmlcss">HTML+CSS</a></li>
+            <li><a href="htmlcss/html-course-landing-page.html" class="nav-bottom-link" id="htmlcss">HTML+CSS</a></li>
 
             <li><a href="python/CourseLandingPage.html" class="nav-bottom-link" id="python">PYTHON</a></li>
 
