--- a/learntocode.html
+++ b/learntocode.html
@@ -19,72 +19,61 @@
         <ul class="nav-top-ul">
             <!-- TODO: Fill in links -->
             <li><b><a href="index.html" class="nav-top-link">Home</a></b></li>
-            <li><b><a href="#" class="nav-top-link">Learn to Code</a></b></li>
-            <li><b><a href="#" class="nav-top-link">About</a></b></li>
+            <li><b><a href="learntocode.html" class="nav-top-link">Learn to Code</a></b></li>
+            <li><b><a href="about.html" class="nav-top-link">About</a></b></li>
         </ul>
     </nav>
-    
+
     <section>
         <h2 class="homepage-h2">
             <b>LEARN TO CODE TODAY</b>
         </h2>
         <section>
             <p class="coding-info">
-                Being able to write code is widely considered 
-                to be one of the most useful skills in the 
+                Being able to write code is widely considered
+                to be one of the most useful skills in the
                 present day. Technology dominates everyday life
                 from smartphones, to computers, to video games
                 and all of these products are united as code
                 is what allows them to function as we know it.
             </p>
             <p class="coding-info">
-                The following lessons will provide you with a 
+                The following lessons will provide you with a
                 general crash course on different coding languages
-                including HTML, CSS, Python, and JavaScript. 
+                including HTML, CSS, Python, and JavaScript.
                 Each language is unique in its own way yet these
-                languages are what allows us to partake in our daily 
-                lives! (It is recommended that you begin with the 
-                “HTML + CSS” course if you are a first time coder in 
+                languages are what allows us to partake in our daily
+                lives! (It is recommended that you begin with the
+                “HTML + CSS” course if you are a first time coder in
                 order to get a background in web development.)
             </p>
             <p class="coding-info">
                 Here are the courses:
             </p>
-            <p class="course-descriptions">
-                <b>
-                    -   JavaScript: Ping-Pong Game Development
-                </b>
-            </p>
-            <p class="course-descriptions">
-                <b>
-                    -   HTML + CSS: Coding a Website From Start to Finish ​
-                </b>
-            </p>
-            <p class="course-descriptions">
-                <b>
-                    -   Python: Word Guessing Game
-                </b>
-            </p>
-            <p class="course-descriptions-java">
-                <b>
-                    -   Java: General Overview
-                </b>
-            </p>
+            <section class="section-1">
+                <ul>
+                    <li style="color:black;">JavaScript</li>
+                    <li style="color:black;">HTML + CSS</li>
+                    <li style="color:black;">Python</li>
+                    <li style="color:black;" style="margin-bottom: 40px;">Java</li>
+                </ul>
+            </section>
         </section>
     </section>
-  <!--Email Button-->
+    <!--Email Button-->
     <section>
         <div>
             <a href="mailto:thenextgenstem@gmail.com"><button class="email-button">thenextgenstem@gmail.com</button></a>
-          </div>
+        </div>
     </section>
     <section class="courses">
         <div>Coding Courses</div>
     </section>
-    <nav class="nav-bottom"> 
+    <nav class="nav-bottom">
         <ul class="nav-bottom-ul">
             <!-- TODO: Fill in links once we get the courses up -->
-            <li class="nav-bottom-effect"><a href="javascript/js1.html" class="nav-bottom-link" id="javascript">JAVASCRIPT</a></li>
+            <li class="nav-bottom-effect"><a href="javascript/js1.html" class="nav-bottom-link"
+                    id="javascript">JAVASCRIPT</a></li>
 
             <li class="nav-bottom-effect"><a href="#" class="nav-bottom-link" id="htmlcss">HTML+CSS</a></li>
 
