--- a/about.html
+++ b/about.html
@@ -19,8 +19,8 @@
         <ul class="nav-top-ul">
             <!-- TODO: Fill in links -->
             <li><b><a href="index.html" class="nav-top-link">Home</a></b></li>
-            <li><b><a href="#" class="nav-top-link">Learn to Code</a></b></li>
-            <li><b><a href="#" class="nav-top-link">About</a></b></li>
+            <li><b><a href="learntocode.html" class="nav-top-link">Learn to Code</a></b></li>
+            <li><b><a href="about.html" class="nav-top-link">About</a></b></li>
         </ul>
     </nav>
     
