--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
     <nav class="nav-top">
         <ul class="nav-top-ul">
             <!-- TODO: Fill in links -->
-            <li><b><a href="#" class="nav-top-link">Home</a></b></li>
+            <li><b><a href="index.html" class="nav-top-link">Home</a></b></li>
             <li><b><a href="learntocode.html" class="nav-top-link">Learn to Code</a></b></li>
-            <li><b><a href="#" class="nav-top-link">About</a></b></li>
+            <li><b><a href="about.html" class="nav-top-link">About</a></b></li>
         </ul>
     </nav>
     <header class="homepage-header">
